<resources>
    <string name="app_name">SurvayApp</string>
    <string name="action_settings">Settings</string>
    <string name="survey_head">Welcome to my Survey</string>
    <string name="name_label">Enter Your Name</string>
    <string name="name">Name</string>
    <string name="start_survey">Start Survey</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="gender">Gender</string>
    <string name="email">Email Id</string>
    <string name="enter_info">Enter Your Details</string>
    <string name="lets_go">Let\'s go</string>
    <string name="question_label">Question</string>
    <string name="compulsary">*</string>
    <string name="submit">Submit</string>
    <array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </array>
    <string name="title_activity_result">ResultActivity</string>
    <string name="view_json">View JSON</string>
</resources>
